--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
+    <style>
+        .projects-container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+        }
+        .project-block {
+            background: white;
+            width: 250px;
+            height: 150px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            cursor: pointer;
+            transition: transform 0.3s, box-shadow 0.3s;
+            text-decoration: none;
+            color: inherit;
+        }
+        .project-block:hover {
+            transform: scale(1.05);
+            box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+        }
+    </style>
 </head>
 
 <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -34,33 +61,33 @@
     </header>
 
     <div class="container">
-        <div class="section">
-            <div class="section-image">
-                <img src="media/HPRC_VP_Portrait.PNG" alt="Welcome PFP">
-            </div>
-            <div class="section-text">
-                <h2>Welcome</h2>
-                <p>Explore my background, resume, and project portfolio using the navigation menu. Here you'll see my skills, projects, and professional experience presented in an interactive and visually engaging way.</p>
-            </div>
-        </div>
-        <div class="section">
-            <div class="section-image">
-              <img src="media/AlexLeadingMeeting.JPG" alt="Background Image">
-            </div>
-            <div class="section-text">
-                <h2>Professional Background</h2>
-                <p>Learn more about my education, work experience, and hobbies that contribute to my growth as an engineer and creative problem solver.</p>
+      <div class="section">
+          <div class="section-image">
+              <img src="media/HPRC_VP_Portrait.PNG" alt="Welcome PFP">
+          </div>
+          <div class="section-text">
+                <h2>Who is Alex?</h2>
+                <p>Hi there, I'm Alex Key, a junior in Aerospace Engineering at NC State University. I am currently working towards my Bachelor's and in the midst of a Computer Programming Minor, and I plan to pursue an accelerated Master's degree after graduating.</p>
+                <p>I am also the Vice President of NC State's High Powered Rocketry Club, Tacho Lycos, and I lead the experimental subteam in projects where we design and manufacture rockets or new technologies our club hasn't done before. Our current project is building a hobby rocket capable of Mach 3 while staying under 17,000 ft. Outside of meeting times I also lead workshops for the club in design software, common practices in the hobby, and safety guidelines.</p>
+                <p>Outside of academics and rocketry, I enjoy drawing, working out, and playing with my dog. While I live in Clayton, North Carolina, I love seeing new places. I'm more passionate about doing what I love than settling down in one place, and I'm always open to wherever the wind takes me.</p>
             </div>
         </div>
-        <div class="section">
-            <div class="section-image">
-                <img src="media\L1 Rocket\IMG_4483.JPG" alt="Projects Image">
-            </div>
-            <div class="section-text">
-                <h2>Project Portfolio</h2>
-                <p>Check out my portfolio page for a detailed view of individual projects, including images, descriptions, and interactive carousels highlighting my work.</p>
-            </div>
+    </div>
+
+    <div class="container">
+        <h2>My Projects</h2>
+        <div class="projects-container">
+            <a href="project1.html" class="project-block">Project 1</a>
+            <a href="project2.html" class="project-block">Project 2</a>
+            <a href="project3.html" class="project-block">Project 3</a>
         </div>
+    </div>
+
+    <div class="container">
+      <h2>Interested in Hiring Me?</h2>
+      <p>Here's some of my qualifications!</p>
+      <embed src="media/General Resume - Alex Key.pdf" width="100%" height="600px" type="application/pdf">
+      <p>For a resume more tailored to your position, please contact me at <a href="mailto:AlexKeyHere@gmail.com">AlexKeyHere@gmail.com</a></p>
     </div>
 
     <footer>
