Updated carousel graphics to include proper images & captions and be formatted properly, updated graphics handling of project blocks & added FEDD machine img

--- a/index.html
+++ b/index.html
@@ -6,33 +6,6 @@
     <title>Home</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
-    <style>
-        .projects-container {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            justify-content: center;
-        }
-        .project-block {
-            background: white;
-            width: 250px;
-            height: 150px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-            cursor: pointer;
-            transition: transform 0.3s, box-shadow 0.3s;
-            text-decoration: none;
-            color: inherit;
-        }
-        .project-block:hover {
-            transform: scale(1.05);
-            box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-        }
-    </style>
 </head>
 
 <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -77,9 +50,9 @@
     <div class="container">
         <h2>My Projects</h2>
         <div class="projects-container">
-            <a href="project1.html" class="project-block">Project 1</a>
-            <a href="project2.html" class="project-block">Project 2</a>
-            <a href="project3.html" class="project-block">Project 3</a>
+            <a href="arcadeMachine.html" class="project-block project1">FEDD Arcade Machine</a>
+            <a href="project2.html" class="project-block project2">Project 2</a>
+            <a href="project3.html" class="project-block project3">Project 3</a>
         </div>
     </div>
 
