Updated project pages to have their own unique header images, removed spaces in media folder names

--- a/arcadeMachine.html
+++ b/arcadeMachine.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
 </head>
-<body>
+<body class="arcade">
     <header>
         <h1>FEDD Arcade Machine</h1>
         <div id="hamburger" class="hamburger">
@@ -46,16 +46,16 @@
         <div class="carousel-container"
             data-carousel
             data-images='[
-                "media/Arcade Machine/ArcadeMachineCAD.png",
-                "media/Arcade Machine/IMG_4893.jpg",
-                "media/Arcade Machine/IMG_5465.jpg",
-                "media/Arcade Machine/IMG_5472.jpg",
-                "media/Arcade Machine/IMG_5457.jpg",
-                "media/Arcade Machine/IMG_5684.jpg",
-                "media/Arcade Machine/IMG_5387.jpg",
-                "media/Arcade Machine/IMG_5629.jpg",
-                "media/Arcade Machine/IMG_5642.jpg",
-                "media/Arcade Machine/IMG_2586.jpg"
+                "media/ArcadeMachine/ArcadeMachineCAD.png",
+                "media/ArcadeMachine/IMG_4893.jpg",
+                "media/ArcadeMachine/IMG_5465.jpg",
+                "media/ArcadeMachine/IMG_5472.jpg",
+                "media/ArcadeMachine/IMG_5457.jpg",
+                "media/ArcadeMachine/IMG_5684.jpg",
+                "media/ArcadeMachine/IMG_5387.jpg",
+                "media/ArcadeMachine/IMG_5629.jpg",
+                "media/ArcadeMachine/IMG_5642.jpg",
+                "media/ArcadeMachine/IMG_2586.jpg"
             ]'
             data-captions='[
                 "After some initial brainstorming, we decided on making a sort of pinball/skee-ball hybrid. Even though projectiles were banned in the project requirements, we were able to get an exception as we designed a protective barrier into the game that would prevent the balls from launching outside of the machine. While we split our group so that two of the members were working on programming and wiring the electronic scoring system, the other team member and I began designing the machine in SolidWorks. This is an earlier design from before we encountered some manufacturing errors with the housing and had to make edits. While my teammate created the CAD for the launcher, I designed the housing based on our material limitations.",
@@ -72,7 +72,7 @@
             
             <div class="carousel-track">
                 <button class="arrow left">‹</button>
-                <img class="carousel-img" src="media/Arcade Machine/ArcadeMachineCAD.png" alt="Carousel Image">
+                <img class="carousel-img" src="media/ArcadeMachine/ArcadeMachineCAD.png" alt="Carousel Image">
                 <button class="arrow right">›</button>
             </div>
     
