--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 
-<body>
+<body class="home">
     <!-- Hamburger menu for moving between pages -->
     <div class="hamburger" id="hamburger">
       <div></div>
@@ -51,7 +51,7 @@
         <h2>My Projects</h2>
         <div class="projects-container">
             <a href="arcadeMachine.html" class="project-block project1">FEDD Arcade Machine</a>
-            <a href="project2.html" class="project-block project2">Project 2</a>
+            <a href="clockArt.html" class="project-block project2">Project 2</a>
             <a href="project3.html" class="project-block project3">Project 3</a>
         </div>
     </div>
