Removed hamburger menu & replaced w/ back arrow to home, removed unused html files

--- a/arcadeMachine.html
+++ b/arcadeMachine.html
@@ -9,19 +9,12 @@
 </head>
 <body class="arcade">
     <header>
-        <h1>FEDD Arcade Machine</h1>
-        <div id="hamburger" class="hamburger">
-            <div></div>
-            <div></div>
-            <div></div>
+        <!-- Back arrow to home page -->
+        <div class="back-arrow">
+            <a href="index.html">← Home</a>
         </div>
-        <div id="menu-overlay"></div>
-        <nav id="mobile-menu" class="hidden">
-            <a href="index.html">Home</a>
-            <a href="about.html">About Me</a>
-            <a href="resume.html">Resume</a>
-            <a href="portfolio.html">Portfolio</a>
-        </nav>
+
+        <h1>FEDD Arcade Machine</h1>
     </header>
 
     <!-- Project Details Container -->
