Added the clockArt.html file, added relevant picture to project portfolio

--- a/arcadeMachine.html
+++ b/arcadeMachine.html
@@ -13,28 +13,27 @@
         <div class="back-arrow">
             <a href="index.html">← Home</a>
         </div>
-
         <h1>FEDD Arcade Machine</h1>
     </header>
 
-    <!-- Project Details Container -->
+    <!-- Project Details -->
     <div class="container">
         <div class="section-text">
-            <p>Every year, NC State University hosts the First Year Engineering Design Day (FEDD). During this event, first year engineering students come together to present a project they've designed and built over the semester. The public is then invited to view and interact with these projects, testing durability in addition to being judged by a panel of judges.</p>
-            <p>My team's category was to build an Arcade Machine. Since an arcade machine can mean a variety of devices, we were given various constraints, such as:</p>
+            <p>Every year, NC State University hosts the First Year Engineering Design Day (FEDD). During this event, first-year engineering students present projects they've designed and built over the semester. The public is invited to view and interact with these projects, testing durability in addition to being judged by a panel of judges.</p>
+            <p>My team's category was to build an Arcade Machine. Constraints included:</p>
             <ul>
                 <li>A $40 budget</li>
-                <li>Needs a mechanism for counting game score (either physical or electronic)</li>
-                <li>Game must be portable</li>
-                <li>Game must allow at least one action involving the skill of the player</li>
-                <li>Game dimensions must be no more than 2' x 3' x 3'</li>
-                <li>Game must be considered safe (no projectiles, explosives, etc.)</li>
+                <li>Mechanism for counting game score (physical or electronic)</li>
+                <li>Portability</li>
+                <li>At least one skill-based action for players</li>
+                <li>Dimensions ≤ 2' x 3' x 3'</li>
+                <li>Safe design (no projectiles, explosives, etc.)</li>
             </ul>
-            <p>While this was a team project, each of our team members concentrated on what we were best at. As such, I did not have any involvement in the programming or wiring of the electronic scoring system, only designing and building the housing.</p>
+            <p>Our team delegated responsibilities such that another teammate and I was responsible for design and manufacturing, while the others handled electronics and programming.</p>
         </div>
     </div>
 
-    <!-- Carousel Container -->
+    <!-- Carousel -->
     <div class="container">
         <div class="carousel-container"
             data-carousel
