--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h2>My Projects</h2>
         <div class="projects-container">
             <a href="arcadeMachine.html" class="project-block project1">FEDD Arcade Machine</a>
-            <a href="clockArt.html" class="project-block project2">Project 2</a>
+            <a href="clockArt.html" class="project-block project2">Clock Art Project</a>
             <a href="project3.html" class="project-block project3">Project 3</a>
         </div>
     </div>
