--- a/index.html
+++ b/index.html
@@ -37,9 +37,12 @@
     <div class="container">
         <h2>My Projects</h2>
         <div class="projects-container">
-            <a href="arcadeMachine.html" class="project-block project1">FEDD Arcade Machine</a>
-            <a href="clockArt.html" class="project-block project2">Clock Art Project</a>
-            <a href="project3.html" class="project-block project3">Project 3</a>
+            <a href="clockArt.html" class="project-block project2">
+                <div class="project-text">Clock Art Project</div></a>
+            <a href="arcadeMachine.html" class="project-block project1">
+                <div class="project-text">FEDD Arcade Machine</div></a>
+            <a href="project3.html" class="project-block project3">
+                <div class="project-text">Project 3</div></a>
         </div>
     </div>
 
