Added Interest Launch to the projects, added interestLaunch.html

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <div class="project-text">Clock Art Project</div></a>
             <a href="arcadeMachine.html" class="project-block project1">
                 <div class="project-text">FEDD Arcade Machine</div></a>
-            <a href="project3.html" class="project-block project3">
-                <div class="project-text">Project 3</div></a>
+            <a href="interestLaunch.html" class="project-block project3">
+                <div class="project-text">Tacho Lycos 2025 Interest Launch</div></a>
         </div>
     </div>
 
