Added footnote to indicate the other projects will be added soon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Home</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
+    <style>
+        .single-margin {
+            margin-top: 40px;
+        }
+    </style>
 </head>
 
 <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -37,13 +42,14 @@
     <div class="container">
         <h2>My Projects</h2>
         <div class="projects-container">
-            <a href="clockArt.html" class="project-block project2">
-                <div class="project-text">Clock Art Project</div></a>
-            <a href="arcadeMachine.html" class="project-block project1">
-                <div class="project-text">FEDD Arcade Machine</div></a>
             <a href="interestLaunch.html" class="project-block project3">
                 <div class="project-text">Tacho Lycos 2025 Interest Launch</div></a>
+            <a href="arcadeMachine.html" class="project-block project1">
+                <div class="project-text">FEDD Arcade Machine</div></a>
+            <a href="clockArt.html" class="project-block project2">
+                <div class="project-text">Clock Art Project</div></a>
         </div>
+        <p class="single-margin">More projects coming soon...</p>
     </div>
 
     <div class="container">
