Added framework for impeller optimization project page, forcing update due to malfunctioning site

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         <div class="projects-container">
             <a href="interestLaunch.html" class="project-block project3">
                 <div class="project-text">Tacho Lycos 2025 Interest Launch</div></a>
+            <!-- <a href="interestLaunch.html" class="project-block project4">
+                <div class="project-text">Optimizing Simple Impeller w/ FEA</div></a> -->
             <a href="arcadeMachine.html" class="project-block project1">
                 <div class="project-text">FEDD Arcade Machine</div></a>
             <a href="clockArt.html" class="project-block project2">
